Updating .gitignore files for: - xml/html bundles - dashboard WEB-INF/lib - brjs/brjs.cmd

--- a/cutlass-sdk/sdk/.gitignore
+++ b/cutlass-sdk/sdk/.gitignore
@@ -1,6 +1,6 @@
 libs
-bladerunner
-bladerunner.cmd
+brjs
+brjs.cmd
 bladerunnerAscii.txt
 loginRealm.conf
 templates
@@ -9,3 +9,4 @@ version.txt
 apps
 jsdoc-toolkit
 jsdoc-templates
+system-applications/live-examples/WEB-INF
