--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	jsLibsAndDocs project(path: ':cutlass-libraries', configuration: 'libsAndDocsZip')
 
 	testRunner dependency('JsTestDriver')
+	testRunner dependency('bval-jsr303')
 	// Note: don't try to add support for transitive dependencies here as it will just fail
 	testRunner project(path: ':js-test-driver-bundler-plugin', transitive : false)
 	testRunner project(path: ':brjs-logger-binding')
