ignore node_modules from sdk zip

--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -242,7 +242,7 @@ task distZip, type:Zip, dependsOn: [assemble], {
 	from "workspace/"
 	into "BladeRunner/"
 	include "licenses/**", "sdk/**", "sdk/**", "apps/apps.txt", "LICENSE", "README.txt"
-	exclude "**/.gitignore", "**/.p4ignore", "**/libs/**/tests/*", "**/system-applications/**/tests/*", "**/bundles/*", "**/javascript/caplin/test/*"
+	exclude "**/.gitignore", "**/.p4ignore", "**/libs/**/tests/*", "**/system-applications/**/tests/*", "**/bundles/*", "**/javascript/caplin/test/*", "**/node_modules/**"
 }
 build.dependsOn distZip
 distZip.mustRunAfter test
@@ -294,7 +294,7 @@ task checkSdkStructure, type:com.caplin.gradle.tasks.CheckDirectoryStructure, de
 		"*/apps/apps.txt",
 		"*/licenses/java.html",
 		"*/licenses/javascript.html",
-		"*/licenses/Third Party Legal Notice.pdf"
+		"*/licenses/Third Party Legal Notice.pdf",
 	]
 	bannedPaths = [
 	   "**/.p4ignore",
@@ -309,7 +309,8 @@ task checkSdkStructure, type:com.caplin.gradle.tasks.CheckDirectoryStructure, de
 	   "**/libs/**/tests/**/*",
 	   "**/system-applications/**/tests/**/*",
 	   "*/sdk/libs/javascript/caplin/test/**",
-	   "*/sdk/run*"
+	   "*/sdk/run*",
+	   "**/node_modules/**"
 	]
 }
 check.dependsOn checkSdkStructure
