--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -43,8 +43,8 @@ dependencies {
 
 
 task zipJsDoc, type:Zip, dependsOn: processResources, {
-	from "jsdoc-toolkit"
-	archiveName "jsdoc-toolkit.zip"
+	from "jsdoc-resources"
+	archiveName "jsdoc-resources.zip"
 	destinationDir = file("${sourceSets.main.output.resourcesDir}/org/bladerunnerjs/core/plugin/command/standard/")
 }
 classes.dependsOn zipJsDoc
