--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -14,4 +14,5 @@ dependencies {
 	compile 'commons-io:commons-io:2.3'
 	compile 'org.apache.httpcomponents:httpclient:4.2.1'
 	compile 'org.apache.commons:commons-lang3:3.1'
+	compile 'org.codehaus.groovy.modules.http-builder:http-builder:0.5+'
 }
