fixing task dependencies for JavaDoc task

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -50,7 +50,7 @@ javadoc {
 	classpath += project.configurations.compileOnly
 }
 
-task javadocZip, type:Zip, {
+task javadocZip, type:Zip, dependsOn:javadoc, {
 	from javadoc.outputs.files.singleFile
 	into "javadoc"
 }
