--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "cutlass-sdk/workspace/sdk/libs/javascript/thirdparty/emitter"]
 	path = cutlass-sdk/workspace/sdk/libs/javascript/thirdparty/emitter
 	url = https://github.com/BladeRunnerJS/emitter.git
+[submodule "cutlass-sdk/workspace/sdk/libs/javascript/thirdparty/emitr"]
+	path = cutlass-sdk/workspace/sdk/libs/javascript/thirdparty/emitr
+	url = https://github.com/BladeRunnerJS/emitr.git
