--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,24 @@ import static org.bladerunnerjs.BuildVersionCalculator.*
 
 apply from: 'wrapper.gradle'
 
+
+def projectBuildVersion = org.bladerunnerjs.BuildVersionCalculator.calculateVersion(project)
+def projectVersionIsDirty = org.bladerunnerjs.BuildVersionCalculator.isVersionDirty(project)
+def projectBuildDate = org.bladerunnerjs.BuildVersionCalculator.calculateBuildDate(project)
+def projectBuildHostname = org.bladerunnerjs.BuildVersionCalculator.calculateBuildHostname(project)
+
+logger.info "Build version calculated as: ${projectBuildVersion}"
+logger.info "Build date is: ${projectBuildDate}"
+logger.info "Build hostname is: ${projectBuildHostname}"
+
 allprojects {
+	
+	ext {
+		buildVersion = projectBuildVersion
+		buildDate = projectBuildDate
+		buildHostname = projectBuildHostname
+	}
+	
 	def projectContainingSharedLogic = (project.parent) ? project.parent : project
 	apply from: projectContainingSharedLogic.file('dependencies.gradle')
 	
@@ -36,24 +53,9 @@ allprojects {
 	
 }
 
-def projectBuildVersion = org.bladerunnerjs.BuildVersionCalculator.calculateVersion(project)
-def projectVersionIsDirty = org.bladerunnerjs.BuildVersionCalculator.isVersionDirty(project)
-def projectBuildDate = org.bladerunnerjs.BuildVersionCalculator.calculateBuildDate(project)
-def projectBuildHostname = org.bladerunnerjs.BuildVersionCalculator.calculateBuildHostname(project)
-
-logger.info "Build version calculated as: ${projectBuildVersion}"
-logger.info "Build date is: ${projectBuildDate}"
-logger.info "Build hostname is: ${projectBuildHostname}"
-
 subprojects { p ->
-	
-	ext {
-		buildVersion = projectBuildVersion
-		buildDate = projectBuildDate
-		buildHostname = projectBuildHostname
-	}
-	
-	version = projectBuildVersion
+		
+	version = buildVersion
 	group = 'org.bladerunnerjs'
 		
 	afterEvaluate { project ->
@@ -140,13 +142,17 @@ afterEvaluate { project ->
 }
 
 
+
 def getProperty = { project, property ->
-	if (!project.hasProperty(property)) {
-		throw new GradleException("${property} property must be set")
-	}
-	return project.property(property)
+if (!project.hasProperty(property)) {
+	throw new GradleException("${property} property must be set")
+}
+return project.property(property)
 }
 
+
+
+/* Automated release stuff */
 
 def getGitHubToken = { project ->
 	return getProperty(project,"githubToken")
@@ -173,20 +179,35 @@ task generateReleaseNotes, {
 		def releaseNoteFile = file("releases/${tagVersion}.md")
 		def milestoneId = getReleaseNoteJson(project,tagVersion).milestone
 		def includeIssueLabels = ["bug", "feature", "enhancement"]
+		def issueIncludeLabelsString = includeIssueLabels.join(", ").replaceAll(/^(.*),(.*)$/,'$1 or$2'); /* regex replaces the last ',' with 'or' */	
 		
-		List<Issue> issues = githubApi.getClosedIssuesForMilestone(milestoneId, includeIssueLabels);
+		List<Issue> issues = githubApi.getClosedIssuesForMilestone(milestoneId)
+		List<Issue> releaseNoteIssues = new LinkedList<Issue>()
+		issues.each {
+			if (it.labels.intersect(includeIssueLabels)) {
+				releaseNoteIssues.add(it)
+			}
+		}
 		
 		assembledReleaseNotesFile.parentFile.mkdirs()
 		assembledReleaseNotesFile.createNewFile()
 		assembledReleaseNotesFile.text = releaseNoteFile.text
 		assembledReleaseNotesFile.text += "\n\n"
 		assembledReleaseNotesFile.text += "-------------\n"
-		assembledReleaseNotesFile.text += "### Closed Issues ###\n"
-		issues.each {
-			assembledReleaseNotesFile.text += "   - ${it.toString()}\n"
+		assembledReleaseNotesFile.text += "### Closed Issues\n"
+		assembledReleaseNotesFile.text += "<sup>${issues.size} issues closed; ${releaseNoteIssues.size} labelled ${issueIncludeLabelsString} - @milestoneURL@<sup>\n\n"
+		releaseNoteIssues.each {
+			assembledReleaseNotesFile.text += "- ${it.toString()}\n"
 		}
 		assembledReleaseNotesFile.text += "\n"
-		assembledReleaseNotesFile.text += '<sub>Parts of this release note have been auto-generated. If you notice any problems with it, <a href="https://github.com/BladeRunnerJS/brjs/issues/new">tell us</a></sub>'
+		assembledReleaseNotesFile.text += '<sub>Parts of this release note have been auto-generated. If you notice any problems with it, <a href="https://github.com/BladeRunnerJS/brjs/issues/new">tell us</a></sub>\n\n'
+	
+    	ant.replace(file: assembledReleaseNotesFile) {
+    		replacefilter(token:"@tagVersion@", value:tagVersion)
+    		replacefilter(token:"@buildVersion@", value:buildVersion)
+    		replacefilter(token:"@milestonesURL@", value:githubApi.getMilestonesUrl())
+    		replacefilter(token:"@milestoneURL@", value:githubApi.getMilestoneUrl(milestoneId))
+    	}
 	}
 }
 
@@ -211,9 +232,3 @@ task githubRelease, dependsOn:[generateReleaseNotes, ':cutlass-sdk:distZip'], {
 		githubApi.uploadAssetForRelease(brjsZip, release)
 	}
 }
-
-//TODO: add issues stats? (e.g. X issues closed this sprint; Y bugs, improvements or enhancements
-//TODO: allow release/<tag>.md to have tokens (e.g. tagName)
-//TODO: allow tokens for GitHub info (milestoneURL etc)
-//TODO: allow more than 1 milestoneID
-//TODO: allow milestone names??
