starting to add some very basic JavaDoc to classes

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -41,3 +41,10 @@ dependencies {
 	
 	testRuntime project(path: ':brjs-logger-binding')
 }
+
+javadoc {
+	title = "BladeRunnerJS ${buildVersion}"
+	classpath += project.configurations.compileOnly
+	/* info for JavaDoc options http://docs.oracle.com/javase/6/docs/technotes/tools/windows/javadoc.html#overviewcomment */
+	options.overview = "${sourceSets.main.java.srcDirs.toArray()[0]}/overview-summary.html"
+}
