Early check-in of changes to support aliasing before attempting to bring the aliasing code over from the 'bundlers' project.

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -33,6 +33,12 @@ dependencies {
 	compile dependency('jta')
 	compile dependency('closure-compiler')
 	
+	/* woodstox deps */
+	compile dependency('woodstox-core-asl')
+	compile dependency('stax2-api')
+	compile dependency('msv-core')
+	compile dependency('trang')
+	
 	compileOnly dependency('servlet-api')
 	compileOnly dependency('junit')
 	compileOnly dependency('mockito-core')
