--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "browser-modules",
   "main": "index.js",
   "version": "0.0.0",
-  "homepage": "https://github.com/kybernetikos/browser-modules",
+  "homepage": "http://kybernetikos.github.io/browser-modules",
   "authors": [
     "kybernetikos <me@kybernetikos.com>"  ],
   "description": "A simple define/require for the browser",
