--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "browser-modules",
   "version": "0.0.0",
   "description": "A simple define/require for the browser.",
+  "homepage": "http://kybernetikos.github.io/browser-modules",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
