renamed index.js to browser-modules.js.  Added a little bit to the README.md

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "browser-modules",
-  "main": "index.js",
+  "main": "browser-modules.js",
   "version": "0.0.0",
   "homepage": "http://kybernetikos.github.io/browser-modules",
   "authors": [
