Progress implementing the missing aliasing tests, plus moved over to using 'java-xmlbuilder' to keep the XML generation code clean. Aliasing tests are now being parked since it would help the tests (and other users) if AliasesFile and AliasDefinitionsFile had write() methods on them directly.

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	compile dependency('jetty-all-server')
 	compile dependency('jta')
 	compile dependency('closure-compiler')
+	compile dependency('java-xmlbuilder')
 	
 	/* woodstox deps */
 	compile dependency('woodstox-core-asl')
