Stop using an internal, JVM implementation-specific TransformerFactory, since this reduces the portability of the code.

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	compile dependency('jta')
 	compile dependency('closure-compiler')
 	compile dependency('java-xmlbuilder')
+	compile dependency('xalan')
 	
 	/* woodstox deps */
 	compile dependency('woodstox-core-asl')
