--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	compile dependency('closure-compiler')
 	compile dependency('java-xmlbuilder')
 	compile dependency('xalan')
+	compile dependency('sjsxp')
 	
 	/* woodstox deps */
 	compile dependency('woodstox-core-asl')
