--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -40,6 +40,8 @@ Dependencies.putAll([
 	'bval-jsr303'				:	'org.apache.bval:bval-jsr303:0.5',
 	'java-xmlbuilder'			:	'com.jamesmurty.utils:java-xmlbuilder:0.6',
 	'xalan'						:	'xalan:xalan:2.7.1',
+	'sjsxp'						:	'com.sun.xml.stream:sjsxp:1.0.2',
+	
 	
 	'reflections'				:	'org.reflections:reflections:0.9.9-RC1',
 
