adding sjsxp to test-runner deps to fix issues finding the class when runnning tests

--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	testRunner dependency('JsTestDriver')
 	testRunner dependency('validation-api')
 	testRunner dependency('bval-jsr303')
+	testRunner dependency('sjsxp')
 	// Note: don't try to add support for transitive dependencies here as it will just fail
 	testRunner project(path: ':js-test-driver-bundler-plugin', transitive : false)
 
