changing tag plugin utility to use an xml parser rather than multiple regexes

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	compile dependency('java-xmlbuilder')
 	compile dependency('xalan')
 	compile dependency('sjsxp')
+	compile dependency('dom4j')
 	
 	/* woodstox deps */
 	compile dependency('woodstox-core-asl')
