--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -41,6 +41,7 @@ Dependencies.putAll([
 	'java-xmlbuilder'			:	'com.jamesmurty.utils:java-xmlbuilder:0.6',
 	'xalan'						:	'xalan:xalan:2.7.1',
 	'sjsxp'						:	'com.sun.xml.stream:sjsxp:1.0.2',
+	'dom4j'						:	'dom4j:dom4j:1.6.1',
 	
 	
 	'reflections'				:	'org.reflections:reflections:0.9.9-RC1',
