Moved the code that automatically adds requires for any non CaplinJs style classes used by CaplinJs style class from CaplinJsBundlerPlugin to CaplinJsSourceFile.

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	compile dependency('xalan')
 	compile dependency('sjsxp')
 	compile dependency('dom4j')
+	compile dependency('utils')
 	
 	/* woodstox deps */
 	compile dependency('woodstox-core-asl')
